fixed scrollbar

--- a/src/assets/scss/globals.scss
+++ b/src/assets/scss/globals.scss
@@ -6,6 +6,27 @@
 
 html {
   scroll-behavior: smooth;
+
+  ::-webkit-scrollbar {
+    width: 3px; /* remove scrollbar space */
+    background: transparent; /* optional: just make scrollbar invisible */
+    height: 3px;
+  }
+
+  &.bright {
+    ::-webkit-scrollbar-thumb {
+      background: $textBright;
+      width: 2px;
+    }
+  }
+
+  &.dark {
+    ::-webkit-scrollbar-thumb {
+      background: $textDark;
+      width: 2px;
+    }
+  }
+
 }
 
 body {
